feat(docs): requests created for autodocumentation, swagger generate succesfully
