# app/Http/Requests/StoreCategoriaRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreCategoriaRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'nome' => 'required|string|max:255',
+            'parent_id' => 'nullable|integer|exists:categorias,id',
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'nome.required' => 'O nome da categoria é obrigatório',
+            'parent_id.exists' => 'Categoria pai inválida'
+        ];
+    }
+}
